<resources>
    <string name="app_name">ChatApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">phone</string>
    <string name="or_login_using_your">Or Login Using Your</string>
    <string name="need_new_account">need new account</string>
    <string name="login">login</string>
    <string name="type_here">Type Here...</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="enter_verification_code">enter verification code</string>
    <string name="verification_code">Send Verification Code</string>
    <string name="verify">Verify</string>
</resources>
