<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhonLoginActivity">

    <EditText
        android:id="@+id/phon_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="180dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/input"
        android:padding="8dp"
        android:hint="@string/enter_your_phone"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textStyle="bold"
        android:drawableStart="@drawable/phone"/>

    <EditText
        android:id="@+id/verification_code_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:layout_marginStart="17dp"
        android:layout_below="@+id/phon_number_input"
        android:layout_marginEnd="17dp"
        android:background="@drawable/input"
        android:padding="8dp"
        android:hint="@string/enter_verification_code"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textStyle="bold"
        android:drawableStart="@drawable/password"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/send_verif_code_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_below="@+id/verification_code_here"
        android:text="@string/verification_code"
        android:textColor="@android:color/background_light"
        android:textSize="19sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginTop="8dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"/>

    <Button
        android:id="@+id/verify_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_below="@+id/send_verif_code_button"
        android:text="@string/verify"
        android:textColor="@android:color/background_light"
        android:textSize="19sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginTop="8dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:visibility="invisible"/>

</RelativeLayout>