<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/login_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/login_photo"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitCenter"/>
            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/login_image"
                android:inputType="textEmailAddress"
                android:hint="email"
                android:background="@drawable/input"
                android:drawableStart="@drawable/email"
                android:padding="4dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="17dp"
                />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/login_email"
                android:inputType="textPassword"
                android:hint="password"
                android:background="@drawable/input"
                android:drawableStart="@drawable/password"
                android:padding="4dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="17dp"
                />

            <TextView
                android:id="@+id/forgat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="forget_password"
                android:textAlignment="textEnd"
                android:textSize="17sp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/login_password"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="17dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/forgat_password"
                android:text="@string/login"
                android:background="@drawable/button"
                android:padding="4dp"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="25sp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="17dp"
                />

            <TextView
                android:id="@+id/new_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/need_new_account"
                android:textAlignment="center"
                android:textSize="17sp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/login_button"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="17dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                />

            <TextView
                android:id="@+id/login_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/or_login_using_your"
                android:textAlignment="center"
                android:textSize="17sp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/new_account"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="17dp"
                android:textColor="@android:color/background_dark"
                />

            <Button
                android:id="@+id/login_by_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/login_phone"
                android:text="@string/phone"
                android:drawableStart="@drawable/phone"
                android:background="@drawable/button"
                android:padding="4dp"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="15sp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="17dp"

                />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>